# TFG-TheRealCodeWars

./: .gitignore  LICENSE  README.md  setUp.h
bots/users/Example/: HarderBot.py
code/: CMakeLists.txt  TheRealCodeWars.cpp  gitignore
code/bots/users/: RealCodeWars.py
code/bots/users/Example/: BlockedBot.py  exampleBot.py
code/bots/users/Luis/: HarderBot.py
code/dataBases/: dataBase.db  users.db
code/game/: CMakeLists.txt  Dashboard.cpp  Utils.cpp  dashboard.h  location.h  utils.h
code/maps/: dashboard.txt
code/server/: config.h
code/server/html/: code.html  createGame.html  game.html  home.html  index.html  login.html  tutorial.html
code/server/html/JavaScript/: code.js  createGame.js  home.js  register.js  winner.js
code/server/html/css/: main.css  style.css
dataBases/: dataBase.db  users.db
game/: Soldier.cpp  direction.h  soldier.h  tile.h
maps/: tierra.txt
server/: CMakeLists.txt  Server.cpp  server.h
server/html/: register.html  winner.html
server/html/JavaScript/: game.js  login.js
server/html/css/: code.css  default.css  styles.css
